--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,10 +16,10 @@
 
 body {
   overflow-x: hidden;
-  background: linear-gradient(to bottom, white, lightgrey);
+  background: linear-gradient(to bottom, darkgrey, lightgrey);
   margin: 0;
 }
-p, h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6, ul {
   margin-left: 5%;
   margin-right: 5%;
 }
@@ -35,7 +35,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 #topbar button {
-  width: 20%; 
+  width: 25%; 
   font-size: 150%;
 }
 #instagram, #timer, #footer {
@@ -49,7 +49,7 @@ p, h1, h2, h3, h4, h5, h6 {
   text-align: center;
   padding: 20px;
   color: darkgrey;
-  background: linear-gradient(to top right, black 0%, #001900 25%, #003200 50%, #004b00 75%, #006400 100%);
+  background: linear-gradient(to top right, black 0%, #190019 25%, #320032 50%, #4b004b 75%, #640064 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,7 +67,7 @@ p, h1, h2, h3, h4, h5, h6 {
       text-shadow: 0 0 20px grey, 0 0 30px grey, 0 0 40px grey, 0 0 50px grey, 0 0 60px grey;
   }
   to {
-      text-shadow: 0 0 30px green, 0 0 40px green, 0 0 50px green, 0 0 60px green, 0 0 70px green, 0 0 80px green; /* Increase glow */
+      text-shadow: 0 0 30px purple, 0 0 40px purple, 0 0 50px purple, 0 0 60px purple, 0 0 70px purple, 0 0 80px purple; /* Increase glow */
   }
 }
 @media (max-width: 600px) {
@@ -110,16 +110,16 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .c-button--gooey {
-  color: #006400;
+  color: darkslateblue;
   text-transform: uppercase;
   letter-spacing: 2px;
-  border: 4px solid #006400;
+  border: 4px solid pink;
   border-radius: 0;
   position: relative;
   transition: all 700ms ease;
 }
 .selected {
-  background-color: #006400;
+  background-color: darkmagenta;
   color: white;
 }
 
@@ -136,7 +136,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .c-button--gooey .c-button__blobs div {
-  background-color: #006400; /* Dark green color */
+  background-color: magenta; 
   width: 34%;
   height: 100%;
   border-radius: 100%;
@@ -241,108 +241,6 @@ p, h1, h2, h3, h4, h5, h6 {
   list-style-type: none;
 }
 
-.deacthlon-header {
-      font-size: 24px; /* Larger font size */
-      font-weight: bold; /* Make the text bold */
-      color: #333; /* Dark grey color for better readability */
-      text-align: center; /* Center the text */
-      padding: 20px; /* Add some padding around the text */
-      margin-bottom: 30px; /* Add some space below the header */
-      border-bottom: 2px solid #666; /* A subtle bottom border */
-      background-color: #f8f8f8; /* A light background color */
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* A soft shadow to lift the header */
-      border-radius: 5px; /* Rounded corners */
-  }
-  .deacthlon {
-      display: flex;
-  }
-  .deacthlon-left-half {
-      width: 50%;
-  }
-  .deacthlon-right-half {
-      width: 50%;
-      position: relative;
-  }
-  .deacthlon-event-row {
-      display: flex;
-      align-items: center;
-      margin-bottom: 10px;
-  }
-  .deacthlon-event-title {
-      flex: 2; 
-  }
-  .deacthlon-event-score {
-      width: 25%;
-  }
-  .deacthlon-event-units {
-      flex: 1;
-      margin-left: 10px;
-  }
-  .deacthlon-event-points {
-      flex: 1; 
-      text-align: right;
-  }
-  .deacthlon-total-score {
-      align-items: center;
-      margin-top: 20px;
-      margin-left: '100%';
-      font-weight: bold;
-  }
-  .deacthlon-line {
-      position: absolute;
-      height: 2px;
-      left: 0;
-  }
-  .deacthlon-input {
-  max-width: 100px;
-  padding: 12px;
-  border: none;
-  border-radius: 4px;
-  box-shadow: 2px 2px 7px 0 rgb(0, 0, 0, 0.2);
-  outline: none;
-  color: dimgray;
-  }
-
-  .deacthlon-input:invalid {
-  animation: justshake 0.3s forwards;
-  color: red;
-  }
-
-  @keyframes justshake {
-  25% {
-      transform: translateX(5px);
-  }
-
-  50% {
-      transform: translateX(-5px);
-  }
-
-  75% {
-      transform: translateX(5px);
-  }
-
-  100% {
-      transform: translateX-(5px);
-  }
-  }
-  #deacthlon-visual-container {
-  position: relative;
-  width: 100%; /* Full width of the container */
-  height: 500px; /* Adjust the height as needed */
-  overflow: hidden; /* Prevents content from spilling outside the container */
-  }
-
-  .carnivore-left-half {
-      width: 50%;
-      /*background-image: url('images/carnivore.jpg');
-      background-size: cover;
-      position: relative;
-      z-index: 1;*/
-  }
-  .carnivore-right-half {
-      width: 50%;
-      padding: 10px;
-  }
   p {
       font-family: 'Arial', sans-serif; /* Change the font to Arial. */
       font-size: 16px; /* Set the font size to 16 pixels. */
@@ -352,15 +250,6 @@ p, h1, h2, h3, h4, h5, h6 {
       text-align: justify; /* Align the text to both left and right margins. */
   }
 
-  .contact-input {
-  padding: 24px;
-  border: none;
-  border-radius: 4px;
-  box-shadow: 2px 2px 7px 0 rgb(0, 0, 0, 0.2);
-  outline: none;
-  color: dimgray;
-  margin-bottom: 25px;
-}
 .container {
       display: flex;
       flex-direction: column;
@@ -368,98 +257,6 @@ p, h1, h2, h3, h4, h5, h6 {
 .row-container{
   display: flex;
   flex-direction: row;
-}
-
-.contact-input.short {
-  max-width: 200px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.contact-input.long {
-  width: 400px;
-}
-
-.contact-input:invalid:focus:not(:placeholder-shown) {
-  animation: justshake 0.3s forwards;
-  color: red;
-}
-
-@keyframes justshake {
-  25% {
-      transform: translateX(5px);
-  }
-
-  50% {
-      transform: translateX(-5px);
-  }
-
-  75% {
-      transform: translateX(5px);
-  }
-
-  100% {
-      transform: translateX(-5px);
-  }
-}
-
-#contactForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-#nameRow {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.contact-btn:link,
-.contact-btn:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: rgb(27, 27, 27);
-  padding: 10px 30px;
-  border: 1px solid;
-  border-radius: 1000px;
-  display: inline-block;
-  transition: all .2s;
-  position: relative;
-}
-
-.contact-btn:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(27, 27, 27, .5);
-}
-
-.contact-btn:active {
-  transform: translateY(-3px);
-}
-
-.contact-btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
-  top: 0;
-  left: 0;
-  position: absolute;
-  z-index: -1;
-  transition: all .3s;
-}
-
-.contact-btn:hover::after {
-  background-color: rgb(32, 128, 64);
-  transform: scaleX(1.4) scaleY(1.5);
-  opacity: 0;
-}
-.autoExpand {
-  overflow-y: hidden;
-  resize: none;
 }
 
 .statistics-section {
