--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,7 @@ body {
   margin: 0;
 }
 p, h1, h2, h3, h4, h5, h6, ul {
-  font-family: '1955', sans-serif;
+  font-family: 'Glaukon', sans-serif;
   margin-left: 5%;
   margin-right: 5%;
   color: lightsalmon;
